fixed dark mode

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -7,3 +7,4 @@ $font-color:#000000;
 $hover-color:#F7F7FA;
 $secondary-hover-color:#9b8b8b;
 $icon-color: #ffffff;
+$dark-mode: #535353;
